--- a/android-engineer.html
+++ b/android-engineer.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/orro/b1339c79-2e7a-4261-8736-6e55e135c3f3'>Orro - Android Applications Engineer - Senior</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/orro/b1339c79-2e7a-4261-8736-6e55e135c3f3'>Orro - Android Applications Engineer - Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... ... SQL/NoSQL databases, Message Brokers, WebSockets; Data Science and 
 Machine Learning Experience; Knowledge of the Android SDK performance tools
@@ -98,7 +98,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
+<h5><a href='https://boards.greenhouse.io/acvauctions/jobs/4350174002'>Job Application for Android Engineer at ACV Auctions</a></h5> 
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -174,7 +174,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/c53caeb2-afda-4089-9e5d-3ab3a584dd31'>Gloo - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -198,7 +198,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1772031'>Job Application for Android Engineer at JUUL Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1772031'>Job Application for Android Engineer at JUUL Labs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Grow as a developer via company support for coding bootcamps, conferences, 
 and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?...</p>
@@ -207,7 +207,7 @@ and other continuing education. KotlinConf; DroidCon; Google I/O; Android Dev?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/269c7c75-10ca-4d6c-a5c8-2edb9097607d'>Babylon Health - Senior Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/babylonhealth/269c7c75-10ca-4d6c-a5c8-2edb9097607d'>Babylon Health - Senior Android Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -257,11 +257,11 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tymit.workable.com/j/E151A0FE4F'>Tymit - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/culturetrip/ba020909-1cfa-4c03-b8b5-d685e29bcf95'>Culture Trip - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -295,11 +295,11 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">Bordeaux France</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4316376002'>Job Application for Senior Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
+<h5><a href='https://boards.greenhouse.io/keeptruckin/jobs/4327388002'>Job Application for Android Engineer at KeepTruckin</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -364,15 +364,15 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/M1Finance/743999690434822-android-engineer'>M1 Finance Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://pegipegi-dot-com.workable.com/j/1A5FC3DF9C'>Pegipegi - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pegipegi-dot-com.workable.com/j/1A5FC3DF9C'>Pegipegi - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1755716'>Job Application for Android Engineer at Omada Health</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -408,7 +408,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999690386466--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999690386466--permanent-jobs-data-scientist-mobile-engineer-ios-android-director-of-engineering-consumer-journeys-salary-200-300k'>Bey (Permanent Jobs) Data Scientist, Mobile Engineer (iOS / Android), Director of Engineering (Consumer Journeys) - Salary: 200-300K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-06-25</p>
 <hr/>
@@ -455,7 +455,7 @@ sushi, fried chicken, hamburgers and so on from our internet service......</p>
 <p><span class="badge badge-light">New York, NY, United States</span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nniZpKwi&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nniZpKwi&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-06-23</p>
 <hr/>
