--- a/android-developer.html
+++ b/android-developer.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dcard/jobs/874426'>Job Application for Senior Android Developer at Dcard</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dcard/jobs/874426'>Job Application for Senior Android Developer at Dcard</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -69,7 +69,7 @@
 mobile apps, fitness sensors, medical devices, cloud computing, machine 
 learning,?...</p>
 <hr/>
-<h5><a href='https://minderacraft.workable.com/jobs/1078992'>Android Developer - Apply online - Mindera - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://minderacraft.workable.com/jobs/1078992'>Android Developer - Apply online - Mindera - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Android Developer at Mindera.</p>
 <hr/>
@@ -90,7 +90,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692219387-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692219387-senior-android-developer-banking-sector-'>Lecle Vietnam Senior Android Developer (Banking Sector) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam Vietnam</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -190,7 +190,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999683079774-senior-android-mobile-developer-to-work-in-prague-czech-republic'>Cross Border Talents Senior Android Mobile Developer to work in Prague, Czech Republic | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CrossBorderTalents1/743999683079774-senior-android-mobile-developer-to-work-in-prague-czech-republic'>Cross Border Talents Senior Android Mobile Developer to work in Prague, Czech Republic | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -210,7 +210,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -347,7 +347,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
-<h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Signeasy.recruiterbox.com/jobs/fk0ywb'>
     Android Developer at SignEasy
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -383,7 +383,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/neatorobotics/jobs/4345214002'>Job Application for Senior Android Developer at Neato Robotics</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -430,7 +430,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -450,7 +450,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light">Ann Arbor, MI, USA</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/senior-android-developer-dsgAbMNAir6Af6aICoXfFy'>Senior Android Developer #0113 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
